--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
+    "com.unity.visualeffectgraph": "17.0.3",
     "com.unity.visualscripting": "1.9.5",
     "com.unity.xr.management": "4.5.0",
     "com.unity.xr.meta-openxr": "2.1.0",
